Fix animation clipping

--- a/app/app.css
+++ b/app/app.css
@@ -47,10 +47,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-main {
-  overflow: hidden;
-}
-
 h1,
 h2,
 h3,
